# win-timer-app-v1

./: .gitignore  README.md  build_apk.sh  build_deb.sh  pyproject.toml  ИНСТРУКЦИЯ.md
.cursor/rules/: timerapp-ag-version-bump.mdc
.github/workflows/: ci.yml
android/: keystore.properties.example
android/app/: build.gradle.kts
android/docs/: webdav-settings-mockup.html
docs/: code-review-followups.md  github-release-v0.5.23.md  github-release-v0.5.31.md  release-notes-v0.4.0.md  release-notes-v0.4.1.md  release-notes-v0.4.2.md  release-notes-v0.5.23.md  release-notes-v0.5.30.md  release-notes-v0.5.31.md  system-requirements.md  webdav-sync.md
docs/pull-requests/: 01-session-comments.md  02-edit-task.md  09-tray-tooltip.md
scripts/: check_version_sync.py  preview_floating_focus.py  preview_focus_panel.py  preview_task_card.py
src/timerapp_ag/: bitrix.py  controller.py  main_window.py  models.py  storage.py  webdav_config.py  webdav_sync.py
src/timerapp_ag/domain/: datetime_util.py  formatting.py  merge.py  queries.py
src/timerapp_ag/ui/: task_row.py
tests/: test_about_ui.py  test_bitrix.py  test_controller.py  test_datetime_util.py  test_formatting.py  test_main_window_ui.py  test_merge_equivalence.py  test_models.py  test_plan.py  test_storage_migration.py  test_tray_tooltip.py  test_webdav.py  test_webdav_sync.py
upstream/: README.md
upstream/win-timer-app-v1/: README-DISTRIBUTION.txt  README.md  TaskTimer.spec  app.py  build_exe.ps1
win_timer_app/: app_info.py  bitrix.py  controller.py  main_window.py  models.py
(+46 files in other folders)
